# 3ds-codegen-crash-repro

./: .gitignore  Cargo.toml  README.md  bisect-repro.sh  repro.sh
src/: main.rs  shape.rs
