[package]
name = "crash-repro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctru-rs = { version = "0.7.1", path = "../ctru-rs/ctru-rs" }
linker-fix-3ds = { path = "../rust-linker-fix-3ds" }
pthread-3ds = { path = "../pthread-3ds" }
